cmake_minimum_required(VERSION 3.0)

PROJECT(cpp-learning)
set(CMAKE_CXX_STANDARD 11)
if (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
    set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra -pthread")
endif()

if (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
    set(CMAKE_CXX_FLAGS /O2 /FA)
endif()
add_executable(lambda lambda.cpp)
add_executable(date_test date_test.cpp date.h date.cpp)
add_executable(accumulator accumulator.cpp)
add_executable(accumulator2 accumulator2.cpp)
add_executable(decltype decltype.cpp)
add_executable(sieve sieve.cpp)
add_executable(forward forward.cpp)
add_executable(move move.cpp)
add_executable(memory_order memory_order.cpp)
add_executable(memory_order_intel memory_order_intel.cpp)
add_executable(memory_barrier_intel memory_barrier_intel.cpp)
add_executable(intel_asm_operations intel_asm_operations.cpp)
add_executable(cpu_info cpu_info.cpp)
add_executable(array array.h array.cpp)
add_executable(setjmp_longjmp setjmp_longjmp.cpp)
add_executable(thread_guard thread_guard.cpp)
add_executable(transactional_memory transactional_memory.cpp)
add_executable(mutex mutex.cpp)
add_executable(accumulate accumulate.cpp)